Fix Ol not showing numbers
Removed ol:inline style from stylesheet

--- a/recipes/style-recipes.css
+++ b/recipes/style-recipes.css
@@ -20,10 +20,6 @@ color: rgb(36, 36, 36);
 font-size: 18px;
 font-weight: 800;
 }
-ol
-{
-    display: inline;
-}
 .desc
 {
     font-weight: 800;
